Added title attributes to all links except blog

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,15 +9,12 @@
 			</div>
 			<p>The page you requested could not be found</p>
 			<div class="col-lg-12 med-margin-bottom med-margin-top">
-				<a href="/" class="btn btn-primary btn-lg btn-icon-right">
+				<a href="/" class="btn btn-primary btn-lg btn-icon-right" title="Home Page">
 					Home Page
 					<div class="hex-alt hex-alt-big">
 						<span class="glyphicon glyphicon-home"></span>
 					</div>
 				</a>
-				<!--<a href="https://app.roadmunk.com/login/#/signup">
-					<div class="cta center"></div>
-				</a>-->
 			</div>
 		</header>
 	</div>
