--- a/views/company.ejs
+++ b/views/company.ejs
@@ -49,17 +49,17 @@
 					<div class="row">
 						<ul class="list-unstyled">
 							<li class="col-md-4 text-center">
-								<a href="http://www.bdc.ca/EN/Pages/home.aspx">
+								<a title="Business Devleopment Bank of Canada" href="http://www.bdc.ca/EN/Pages/home.aspx">
 									<img src="/images/bdc.png" width="150px">
 								</a>
 							</li>
 							<li class="col-md-4 text-center">
-								<a href="http://www.canrockventures.com/">
+								<a title="Canrock Ventures" href="http://www.canrockventures.com/">
 									<img src="/images/canrock-ventures.png" width="150px">
 								</a>
 							</li>
 							<li class="col-md-4 text-center">
-								<a href="http://digitalmediazone.ryerson.ca/">
+								<a title="Digital Media Zone" href="http://digitalmediazone.ryerson.ca/">
 									<img src="http://placehold.it/150x150" width="150px" height="150px" alt="Digital Media Zone">
 								</a>
 							</li>
@@ -68,12 +68,12 @@
 					<div class="row">
 						<ul class="list-unstyled">
 							<li class="col-md-6 text-center">
-								<a href="http://www.communitech.ca/">
+								<a title="Communitech" href="http://www.communitech.ca/">
 									<img src="/images/communitech.png" width="300px">
 								</a>
 							</li>
 							<li class="col-md-6 text-center">
-								<a href="http://hyperdrive.communitech.ca/">
+								<a title="Hyperdrive" href="http://hyperdrive.communitech.ca/">
 									<img src="/images/hyperdrive.png" width="300px">
 								</a>
 							</li>
@@ -90,7 +90,7 @@
 					<h1 class="headline text-large hairline">Contact Us</h1>
 					<p>Feel free to ask us anything</p>
 					<p>
-						<a href="mailto:support@roadmunk.com?Subject=Contact">support@roadmunk.com</a>
+						<a title="Contact" href="mailto:support@roadmunk.com?Subject=Contact">support@roadmunk.com</a>
 					</p>
 				</header>
 			</div>
