--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,13 +9,13 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/company" title="Twitter">
-						About
+					<a href="/company" title="Contact Us">
+						Contact Us
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/company" title="Contact Us">
-						Contact Us
+					<a href="/styleguide" title="Style Guide">
+						Style Guide
 					</a>
 				</li>
 			</ol>
@@ -98,7 +98,7 @@
 			</a>
 		</div>
 		<div class="info-right">
-			<a class="dmz" href="http://digitalmediazone.ryerson.ca/">
+			<a class="dmz" href="http://digitalmediazone.ryerson.ca/" title="Digital Media Zone">
 				<img src="/images/dmz-footer.png" alt="Digital Media Zone" height="22px">
 			</a>
 			<a href="mailto:support@roadmunk.com?Subject=Support%20Case" title="Support">support&#64;roadmunk.com</a>
