--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,18 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">
+      <a title="E.T. Go Home" class="navbar-brand" href="/">
         <img src="/images/logo_white.png" height="35px">
       </a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/features">Features</a></li>
-        <li><a href="/pricing">Pricing</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/company">Company</a></li>
-        <li><a href="https://app.roadmunk.com/login/#/">Sign In</a></li>
+        <li><a title="Features" href="/features">Features</a></li>
+        <li><a title="Pricing" href="/pricing">Pricing</a></li>
+        <li><a title="Blog" href="/blog">Blog</a></li>
+        <li><a title="Company" href="/company">Company</a></li>
+        <li><a title="Sign In" href="https://app.roadmunk.com/login/#/">Sign In</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
