--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -9,7 +9,7 @@
 
 	<p>At Roadmunk Inc. (“Roadmunk”), we are committed to maintaining the confidentiality and security of any personal information about our users. Your privacy is always at the top of our priorities, and we are focused on protecting it from unauthorized access. This Privacy &#38; Security Policy supplements our Terms and Conditions and spells out how we collect, use, and disclose of information from or about you through our website <a href="http://www.roadmunk.com">www.roadmunk.com</a> and the Roadmunk service.</p>
 
-	<p>Users can access the Roadmunk service (the “Service”) via our website <a href="http://www.roadmunk.com">www.roadmunk.com</a>, applications on Devices, APIs, and third-parties. A “Device” is any device used to access the Roadmunk Service, including without limitation a computer, mobile phone, tablet, or other electronic device. By using our Service you are consenting to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy &#38; Security Policy. The use of information collected through our service shall be limited to the purpose of providing the service for which the Roadmunk customer (“Customer”) has engaged Roadmunk.</p>
+	<p>Users can access the Roadmunk service (the “Service”) via our website <a title="Go to roadmunk.com" href="http://www.roadmunk.com">www.roadmunk.com</a>, applications on Devices, APIs, and third-parties. A “Device” is any device used to access the Roadmunk Service, including without limitation a computer, mobile phone, tablet, or other electronic device. By using our Service you are consenting to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy &#38; Security Policy. The use of information collected through our service shall be limited to the purpose of providing the service for which the Roadmunk customer (“Customer”) has engaged Roadmunk.</p>
 
 	<h3>The Information We Collect And Store</h3>
 
@@ -47,7 +47,7 @@
 
 	<p class="top"><strong>Analytics</strong></p>
 
-	<p class="bottom">We also collect some information (ourselves or using third party services) that requires using logging and cookies, such as IP address, which can sometimes be correlated with Personal Information. We use this information for the above purposes and to monitor and analyze use of the Service, for the Service's technical administration, to increase our Service's functionality and user-friendliness, to verify users have the authorization needed for the Service to process their requests, and for advertising purposes. As of the date this policy went into effect, we use Google Analytics. Visitors can opt out of Google's use of cookies for advertising purposes by visiting <a href="http://www.google.com/settings/ads">Google's Ads Settings</a>. To learn more about the privacy policy of Google Analytics, <a href="http://www.google.com/analytics/learn/privacy.html">click here</a>. To learn how to opt out of that service, <a href="https://tools.google.com/dlpage/gaoptout">click here.</a></p>
+	<p class="bottom">We also collect some information (ourselves or using third party services) that requires using logging and cookies, such as IP address, which can sometimes be correlated with Personal Information. We use this information for the above purposes and to monitor and analyze use of the Service, for the Service's technical administration, to increase our Service's functionality and user-friendliness, to verify users have the authorization needed for the Service to process their requests, and for advertising purposes. As of the date this policy went into effect, we use Google Analytics. Visitors can opt out of Google's use of cookies for advertising purposes by visiting <a title="Google's Ads Settings" href="http://www.google.com/settings/ads">Google's Ads Settings</a>. To learn more about the privacy policy of Google Analytics, <a title="Google Analytics Privacy Policy" href="http://www.google.com/analytics/learn/privacy.html">click here</a>. To learn how to opt out of that service, <a title="Opt out of Google Analytics" href="https://tools.google.com/dlpage/gaoptout">click here.</a></p>
 
 	<h3>Information Sharing and Disclosure by Us</h3>
 
@@ -57,7 +57,7 @@
 
 	<p class="top"><strong>Service Providers, Business Partners and Others.</strong></p>
 
-	<p class="bottom">We may use certain trusted third-party companies and individuals to help us provide, analyze, and improve the Service (including but not limited to data storage, maintenance services, database management, web analytics, payment processing, and improvement of the Service's features). These third parties may have access to your information for purposes of performing these tasks on our behalf and under obligations similar to those in this Privacy Policy. As of the date this policy went into effect, we use Amazon's S3 storage service to store some of your information (for example, your files). You can find more information on Amazon's data security from the <a href="https://aws.amazon.com/security/">S3 site.</a></p>
+	<p class="bottom">We may use certain trusted third-party companies and individuals to help us provide, analyze, and improve the Service (including but not limited to data storage, maintenance services, database management, web analytics, payment processing, and improvement of the Service's features). These third parties may have access to your information for purposes of performing these tasks on our behalf and under obligations similar to those in this Privacy Policy. As of the date this policy went into effect, we use Amazon's S3 storage service to store some of your information (for example, your files). You can find more information on Amazon's data security from the <a title="AWS Security" href="https://aws.amazon.com/security/">S3 site.</a></p>
 
 	<p class="top"><strong>Third-Party Applications</strong></p>
 
@@ -73,7 +73,7 @@
 
 	<p class="top"><strong>Changing or Deleting Your Information</strong></p>
 
-	<p class="bottom">If you are a registered user, you may review, update, correct, or delete certain Personal Information provided in your registration or account profile by changing your account settings. If your personally identifiable information changes, or if you no longer desire our Service, you may update or delete it by making the change in your account settings, although (in some cases) we may retain copies of your information if required by law, to protect our rights, or if it is not technically reasonably feasible to remove it. For questions about your Personal Information on our Service, please contact <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com</a>. We will respond to your inquiry within 7 business days.</p>
+	<p class="bottom">If you are a registered user, you may review, update, correct, or delete certain Personal Information provided in your registration or account profile by changing your account settings. If your personally identifiable information changes, or if you no longer desire our Service, you may update or delete it by making the change in your account settings, although (in some cases) we may retain copies of your information if required by law, to protect our rights, or if it is not technically reasonably feasible to remove it. For questions about your Personal Information on our Service, please contact <a title="Contact Support" href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com</a>. We will respond to your inquiry within 7 business days.</p>
 
 	<p class="top"><strong>Data Retention</strong></p>
 
@@ -81,11 +81,11 @@
 
 	<p class="top"><strong>Choice/Opt-Out</strong></p>
 
-	<p class="bottom">You may choose to stop receiving our newsletter or marketing emails by following the unsubscribe instructions included in these emails, or you can contact us at <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com.</a></p>
+	<p class="bottom">You may choose to stop receiving our newsletter or marketing emails by following the unsubscribe instructions included in these emails, or you can contact us at <a title="Contact Support" href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com.</a></p>
 
 	<p class="top"><strong>Blogs</strong></p>
 
-	<p class="bottom">Our website offers publicly accessible blogs or community forums. You should be aware that any information you provide in these areas may be read, collected, and used by others who access them. To request removal of your personal information from our blog or community forum, contact us at <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com</a>. In some cases, we may not be able to remove your personal information. If this is the case, we will let you know and indicate why.</p>
+	<p class="bottom">Our website offers publicly accessible blogs or community forums. You should be aware that any information you provide in these areas may be read, collected, and used by others who access them. To request removal of your personal information from our blog or community forum, contact us at <a title="Cotnact Support" href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com</a>. In some cases, we may not be able to remove your personal information. If this is the case, we will let you know and indicate why.</p>
 
 	<p class="top"><strong>Security</strong></p>
 
@@ -93,7 +93,7 @@
 
 	<p class="top"><strong>Contacting Us</strong></p>
 
-	<p class="bottom">If you have any questions about this Privacy Policy, please contact us at <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com</a>, or at c/o Digital Media Zone, 10 Dundas Street East, Suite 600, M5B2G9.</p>
+	<p class="bottom">If you have any questions about this Privacy Policy, please contact us at <a title="Contact Support" href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com</a>, or at c/o Digital Media Zone, 10 Dundas Street East, Suite 600, M5B2G9.</p>
 
 	<p class="top"><strong>Changes to our Privacy &#38; Security Policy</strong></p>
 
