--- a/views/style-guide.ejs
+++ b/views/style-guide.ejs
@@ -1,6 +1,8 @@
 <div class="wrapper">
   <header>
-    <img width="150px" height="175px" style="border: none; margin: -28px 0 -28px -5px;" src="/images/style-guide/v1_white.png">
+    <a href="/">
+      <img width="150px" height="175px" style="border: none; margin: -28px 0 -28px -5px;" src="/images/style-guide/v1_white.png">
+    </a>
     <p class="header ql-header">Quick Links</p>
 
 
