--- a/views/termsandconditions.ejs
+++ b/views/termsandconditions.ejs
@@ -12,7 +12,7 @@
 				</span>
 				<!-- attach subheader if want on same level as other text -->
 				<span class="col-md-5 right move-up">
-					<a href="https://app.roadmunk.com/login/#/signup" class="cta right"></a>
+					<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup" class="cta right"></a>
 				</span>
 			</div>
 		</div>
