--- a/views/gotop.ejs
+++ b/views/gotop.ejs
@@ -1,3 +1,3 @@
-<a href="javascript:void(0)" class="go-top hex-alt">
+<a title="Go to the top of the page" href="javascript:void(0)" class="go-top hex-alt">
 	<span class="glyphicon glyphicon-chevron-up"></span>
 </a>
