--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-12 small-margin-top small-margin-bottom">
-				<a href="https://app.roadmunk.com/login/#/signup">
+				<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
 					<div class="cta center"></div>
 				</a>
 			</div>
@@ -59,7 +59,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
-					<a href="https://app.roadmunk.com/login/#/signup">
+					<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
 						<div class="cta center"></div>
 					</a>
 				</div>
@@ -109,7 +109,7 @@
 				</div>
 				<div class="row">
 				<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
-					<a href="https://app.roadmunk.com/login/#/signup">
+					<a title="Learn more about Roadmunk" href="https://app.roadmunk.com/login/#/signup">
 						<div class="cta learn-more center"></div>
 					</a>
 				</div>
@@ -174,7 +174,7 @@
 						</ul>
 						<div class="row">
 							<div class="col-md-10 xsmall-margin-top small-margin-bottom center">
-								<a href="https://app.roadmunk.com/login/#/signup">
+								<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
 									<div class="cta small-cta center"></div>
 								</a>
 							</div>
@@ -281,7 +281,7 @@
 			</header>
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="https://app.roadmunk.com/login/#/signup">
+					<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
 						<div class="cta center"></div>
 					</a>
 				</div>
