--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -16,7 +16,7 @@
 					<p>Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
 				</span>
 				<span class="col-md-5 right subheader move-up">
-					<a href="https://app.roadmunk.com/login/#/signup" class="cta right"></a>
+					<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup" class="cta right"></a>
 				</span>
 			</div>
 		</div>
