Text Changes + Pricing Changes

--- a/views/pricingtable.ejs
+++ b/views/pricingtable.ejs
@@ -36,7 +36,7 @@
 						<div class="border"></div>
 						<div class="cost">
 							<p>&#36;
-								<span id="starterPrice" class="price">9</span>
+								<span id="starterPrice" class="price">10</span>
 								<span class="subheader1">a user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
@@ -259,7 +259,7 @@
 				<td>Premium Phone &#38; Email</td>
 			</tr>
 			<tr>
-				<th>Roadmapped</th>
+				<th>Coming Soon</th>
 				<td>&nbsp;</td>
 				<td>
 					<div>JIRA integration</div>
@@ -267,10 +267,19 @@
 					<div>Change Notification</div>
 				</td>
 				<td>
+					<div>JIRA integration</div>
+					<div>Dependencies</div>
+					<div>Change Notification</div>
 					<div>Sub-Roadmaps</div>
 					<div>Download to PPT and Slides</div>
 				</td>
-				<td>&nbsp;</td>
+				<td>
+					<div>JIRA integration</div>
+					<div>Dependencies</div>
+					<div>Change Notification</div>
+					<div>Sub-Roadmaps</div>
+					<div>Download to PPT and Slides</div>
+					</td>
 			</tr>
 			<tr>
 				<td class="button-row">&nbsp;</td>
