--- a/public/stylesheets/pricingTable.less
+++ b/public/stylesheets/pricingTable.less
@@ -181,13 +181,13 @@
 
 				.subheader1 {
 					font-size: 14px;
-					font-weight: @thin;
+					font-weight: 400;
 					text-transform: uppercase;
 					display: block;
 				}
 				.subheader2 {
 					font-size: 10px;
-					font-weight: @thin;
+					font-weight: 400;
 					display: block;
 					&.monthly {
 						display: none;
