Pre Release Changes

--- a/public/stylesheets/blogPost.less
+++ b/public/stylesheets/blogPost.less
@@ -50,6 +50,10 @@
    			}
    		}
 	}
+	.social-shares {
+		text-align: center;
+		font-size: 32px;
+	}
 	.footer {
 		border-top: 1px solid rgba(0,0,0,0.15);
 		background: @light-font;
