--- a/public/stylesheets/pricingTable.less
+++ b/public/stylesheets/pricingTable.less
@@ -108,6 +108,11 @@
 		color : @admin-green;
 	}
 
+	//I don't think you need the x's b/c of the zebra stripes but they're here for now
+	.pricing-x {
+		color : lighten(@error-red, 5%);
+	}
+
 
 	td {
 		&.table-header {
