--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,7 +9,7 @@
 			</div>
 			<p>The page you requested could not be found</p>
 			<div class="col-lg-12 med-margin-bottom med-margin-top">
-				<a href="/" class="btn btn-primary btn-lg btn-icon-right" title="Home Page">
+				<a href="/" class="btn btn-primary btn-lg btn-icon-left" title="Home Page">
 					Home Page
 					<div class="hex-alt hex-alt-big">
 						<span class="glyphicon glyphicon-home"></span>
