--- a/views/blog/blogLayout.ejs
+++ b/views/blog/blogLayout.ejs
@@ -46,19 +46,65 @@
 										<img src="/images/<%= bannerURL %>">
 									</a>
 								<% } %>
-								<div class="footer">
-									<div class="col-md-2">
-										<div class="box-round box-huge">
-											<div class="box-dummy"></div>
-											<div class="box-inner">
-												<img src="/images/<%= author.profile_img %>">
+								<% if (bioOn != false) { %>
+									<div class="footer row">
+										<div class="col-md-2">
+											<div class="box-round box-huge">
+												<div class="box-dummy"></div>
+												<div class="box-inner">
+													<img src="/images/<%= author.profile_img %>">
+												</div>
 											</div>
 										</div>
+										<div class="col-md-10">
+											<p class="author"><%= author.name %></p>
+											<p class="bio"><%= author.bio %></p>
+										</div>
 									</div>
-									<div class="col-md-10">
-										<p class="author"><%= author.name %></p>
-										<p class="bio"><%= author.bio %></p>
+								<% } %>
+								<div class="row xsmall-margin-bottom small-margin-top">
+									<div class="col-md-4">
+										<a href="/" class="btn btn-primary btn-lg btn-icon-left" title="Home Page">
+											Home Page
+											<div class="hex-alt hex-alt-big">
+												<span class="glyphicon glyphicon-home"></span>
+											</div>
+										</a>
 									</div>
+									<div class="col-md-4 social-shares">
+										<a title="Share On Facebook" target="_blank" onclick="
+											return !window.open(this.href, 'Facebook', 'width=640,height=300')" href="http://www.facebook.com/sharer/sharer.php?u=http://roadmunk.com/blog/<%= url %>">
+											<span class="icon-facebook"></span>
+										</a>
+										<a title="Share On Twitter" onclick="
+											return !window.open(this.href, 'Twitter', 'width=640,height=300')" href="
+											https://twitter.com/share?url=http://roadmunk.com/blog/<%= url %>&text=<%= title %>">
+											<span class="icon-twitter"></span>
+										</a>
+										<a title="Share On Linked In" target="_blank" onclick="
+											return !window.open(this.href, 'Linked In', 'width=640,height=500')"
+										href="http://www.linkedin.com/shareArticle?mini=true
+										&url=http://roadmunk.com/blog/<%= url %>
+										&title=<%= title %>
+										&summary=<%= description %>
+										&source=roadmunk.com">
+											<span class="icon-linkedin"></span>
+										</a>
+										<a title="Share On Google Plus" target="_blank" onclick="
+											return !window.open(this.href, 'Google Plus', 'width=640,height=500')" href="https://plus.google.com/share?url=www.roadmunk.com/blog/<%= url %>">
+											<span class="icon-googleplus"></span>
+										</a>
+									</div>
+									<% if (id != 1) { %>
+										<div class="col-md-4">
+											<a href="/blog/<%= nextBlog %>" class="btn btn-primary btn-lg btn-icon-right right" title="Home Page">
+												Next Blog
+												<div class="hex-alt hex-alt-big">
+													<span class="glyphicon glyphicon-chevron-right"></span>
+												</div>
+											</a>
+										</div>
+									<% } %>
 								</div>
 								<% include ../disqus-script %>
 							</div>
