--- a/views/features.ejs
+++ b/views/features.ejs
@@ -110,12 +110,12 @@
 					<div class="col-md-10 center">
 						<div id="feature_5_text" class="col-md-5 transparent">
 							<header class="small-header features-text-left">
-								<h1 class="headline text-small hairline">Print to A4 &#38; Legal</h1>
-								<p class="body-subheader features">Let us help you prepare for those important roadmap meetings by creating printer friendly versions of your roadmap. </p>
+								<h1 class="headline text-small hairline">Roadmap Permissions</h1>
+								<p class="body-subheader features">Stay in control and collaborate by adding team members via the permission dialogue. You can make them either an editor or owner of the roadmap.</p>
 							</header>
 						</div>
 						<div id="feature_5_img" class="col-md-6 features-right features-text-right transparent">
-							<img src="/images/publish-print-cs.png">
+							<img src="/images/permissions.png">
 						</div>
 					</div>
 				</div>
@@ -129,11 +129,30 @@
 					<div class="col-md-10 center">
 						<div id="feature_6_text" class="col-md-5 features-right transparent">
 							<header class="small-header features-text-left">
+								<h1 class="headline text-small hairline">Print to A4 &#38; Legal</h1>
+								<p class="body-subheader features">Let us help you prepare for those important roadmap meetings by creating printer friendly versions of your roadmap. </p>
+							</header>
+						</div>
+						<div id="feature_6_img" class="col-md-6 features-text-left transparent">
+							<img src="/images/publish-print-cs.png">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section white section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 center">
+						<div id="feature_7_text" class="col-md-5 transparent">
+							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Idea Management</h1>
 								<p class="body-subheader features">Create or import roadmap items directly into your table view. Quickly sort, filter, and prioritize roadmap items using the fastest and sleekest new UI technologies.</p>
 							</header>
 						</div>
-						<div id="feature_6_img" class="col-md-6 features-text-left transparent">
+						<div id="feature_7_img" class="col-md-6 features-right features-text-right transparent">
 							<img src="/images/table.png">
 						</div>
 					</div>
