--- a/views/pricingtable.ejs
+++ b/views/pricingtable.ejs
@@ -3,20 +3,16 @@
 		<div class="price-title">
 			Pricing Packages
 		</div>
-
-		<div class="discount">
-			20&#37; off your first year if you sign up before August 31, 2014.
-		</div>
 	</div>
 </div>
 
 <div class="row">
-	<div class="col-md-3 center preview-switch">
+	<div class="col-md-4 center preview-switch">
 		<span id="monthly" class="write toggle-switch grey">Monthly</span>
 		<div class="switch-pill right">
 			<div class="switch"></div>
 		</div>
-		<span id="annually" class="toggle-switch right">Annually</span>
+		<span id="annually" class="toggle-switch right">Annually &#40;Save 20&#37;&#41;</span>
 	</div>
 </div>
 
@@ -182,7 +178,9 @@
 
 			<tr>
 				<th>Custom Color Palettes&#42;</th>
-				<td>&nbsp;</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
 				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
 				</td>
@@ -196,7 +194,9 @@
 
 			<tr>
 				<th>Permissions</th>
-				<td>&nbsp;</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
 				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
 				</td>
@@ -209,7 +209,9 @@
 			</tr>
 			<tr>
 				<th>Fit to Powerpoint&#42;</th>
-				<td>&nbsp;</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
 				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
 				</td>
@@ -222,7 +224,9 @@
 			</tr>
 			<tr>
 				<th>Download Roadmap HTML&#42;</th>
-				<td>&nbsp;</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
 				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
 				</td>
@@ -235,18 +239,30 @@
 			</tr>
 			<tr>
 				<th>Secure Private Cloud</th>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
 				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
 				</td>
 			</tr>
 			<tr>
 				<th>Advanced Customization</th>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
 				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
 				</td>
@@ -260,7 +276,9 @@
 			</tr>
 			<tr>
 				<th>Coming Soon</th>
-				<td>&nbsp;</td>
+				<td>
+					&nbsp;
+				</td>
 				<td>
 					<div>JIRA integration</div>
 					<div>Dependencies</div>
