--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -58,17 +58,32 @@
     }
     .post-media {
         padding-top: 48px;
-        background: @steel-dark;
+        background: @steel-darker;
         margin-bottom: 0px;
         max-height: 200px;
         overflow-y: hidden;
-        //Figure out how to get overlay working
-        &.overlay {
-            background: transparent;
-            &:hover {
-                background: rgba(0,0,0,0.75);
+        cursor: pointer;
+        &.overlay:hover {
+            background: @steel-dark;
+            .transition(all 0.2s);
+            img {
+                -webkit-filter: grayscale(1);
+                filter : grayscale(1);
+                .transition(all 0.2s);
             }
         }
+        //Figure out how to get overlay working
+        /*.overlay {
+            z-index: 5;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            .transition(background 0.2s);
+            &:hover {
+                .transition(background 0.2s);
+                background: rgba(0,0,0,0.07);
+            }
+        }*/
         .feature-image {
             display: block;
             margin-top: -48px;
