--- a/public/stylesheets/features.less
+++ b/public/stylesheets/features.less
@@ -2,6 +2,7 @@
 	img {
 		border-radius: 6px;
 		border: 1px solid @steel-lightest;
+		opacity: 0.95;
 	}
 	.features-text-right {
 		text-align: right;
