--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -10,6 +10,11 @@ img.blur {
     filter: blur(3px) !important;
 }
 
+img.blend {
+    opacity: 0.95;
+    .border-radius(6px);
+}
+
 img {
     max-width: 100%;
 }
@@ -500,7 +505,7 @@ a {
     }
 }
 
-@media (max-width: 979px) {
+@media (max-width: 1000px) {
     .go-top {
     	display: none !important;
     }
