--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -473,6 +473,9 @@
     }
     &.section-short {
       padding: 30px 0;
+      &.extra-top-header {
+        padding-top: 120px;
+      }
       &.landing-page {
         padding-top: 110px;
       }
@@ -498,6 +501,9 @@
     }
     &.section-short {
       padding: 15px 0;
+      &.extra-top-header {
+        padding-top: 100px;
+      }
       &.landing-page {
         padding-top: 100px;
       }
