--- a/views/home.ejs
+++ b/views/home.ejs
@@ -131,9 +131,9 @@
 							<!--<img class="bg" src="/images/browser.jpg">-->
 							<img class="bg" src="/images/browser-roadmunk.jpg">
 							<!--<p class="url">https://app.roadmunk.com</p>-->
-							<img id="sprintImg" class="screen selected-img" src="/images/sprint-roadmap.png">
-							<img id="projectImg" class="screen" src="/images/product-roadmap.png">
-							<img id="releaseImg" class="screen" src="/images/release-roadmap.png">
+							<img id="sprintImg" class="screen selected-img" src="/images/sprint-roadmap2.png">
+							<img id="projectImg" class="screen" src="/images/project-roadmap2.png">
+							<img id="releaseImg" class="screen" src="/images/release-roadmap2.png">
 						</div>
 					</div>
 					<div class="col-md-4">
