--- a/views/features.ejs
+++ b/views/features.ejs
@@ -11,11 +11,11 @@
 					<div class="col-lg-8 center">
 						<div class="col-lg-6 text-center">
 							<h3 class="text-small thin xsmall-margin-bottom">Timeline</h3>
-							<img src="/images/timeline.png">
+							<img class="blend" src="/images/timeline2.png">
 						</div>
 						<div class="col-lg-6 text-center">
 							<h3 class="text-small thin xsmall-margin-bottom">Swimlane</h3>
-							<img src="/images/swimlane.png">
+							<img class="blend" src="/images/swimlane.png">
 						</div>
 					</div>
 				</div>
